--- a/test/test2.html
+++ b/test/test2.html
@@ -15,21 +15,27 @@
 <body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <div class="example-1">
-  <div class="example-2">
+  <div class="example-2"> 
     <p>Example one</p>
     <p>Example two</p>
+    <button class="btn-copy">Copy</button>
+    <button class="btn-delete">Delete</button>
   </div>
 </div>
-<button class="btn-copy">Copy</button>
 <script>
-$( document ).ready(function() {
-  $(".btn-copy").click(function(event){
-    var parentnode=this.parentNode;
-    var OuterHtml=parentnode.outerHTML;
-    var TopLevel=parentnode.parentNode;
-    $(TopLevel).append(OuterHtml);
-  });
-});
+  $(function(){
+  $(".btn-copy").on('click', function(){
+    var ele = $(this).closest('.example-2').clone(true);
+    $(this).closest('.example-2').after(ele);
+  })
+})
+
+$(".btn-delete").click(function () {
+            const countAll = document.querySelectorAll('.example-2').length;
+            if (countAll > 1) {
+                $(this).parent().closest('div').remove();
+            }
+        });
 </script>
 </body>
 </html>
