--- a/admin/index.html
+++ b/admin/index.html
@@ -2,8 +2,8 @@
   session_start();
   $page = "index";
   include('header.html');
-  if (isset($_SESSION['username'])) {
-      header("location: home.html");
+  if (isset($_SESSION['admin-username'])) {
+      header("location: admin-dashboard.html");
       exit();
   }
 ?>
@@ -11,24 +11,23 @@
 
 
 <div class="text-center mt-4" id="login-container">
-  <form id="login-form" action="includes/login.inc.php" method="post">
-    <h1 class="mt-4 mb-4 text-white">Login</h1>
+  <form id="login-form" action="includes/admin-login.inc.php" method="post">
+    <h1 class="mt-4 mb-4 text-white">Admin Login</h1>
     <div class="mb-3">
-      <input type="text" class="form-control" id="UUsername" name="UUsername" placeholder="Username/Email..." required autofocus>
+      <input type="text" class="form-control" id="AUsername" name="AUsername" placeholder="Username/Email..." required autofocus>
     </div>
     <div class="mb-3">
-      <input type="password" class="form-control" id="UPassword" name="UPassword" placeholder="Password..." required>
+      <input type="password" class="form-control" id="APassword" name="APassword" placeholder="Password..." required>
     </div>
     <div class="mt-3 mb-3">
       <input type="submit" id="submit" name="submit" class="btn btn-lg btn-primary w-100"/>
     </div>
-    <a href="sign-up.html" class="btn btn-success">Create Account</a>
     <div class="mt-3 mb-3">
       <?php
         if (isset($_GET["error"])) {
             if ($_GET["error"] == "wrongaccount"){
                 echo "<p style='color: red; font-size: 15px'>The username or email you entered isn’t connected to an account. 
-                  <a href='sign-up.html' style='color: red; font-size: 15px'>Create a new account.</a></p>";
+                  <a href='../contact-us.html' style='color: red; font-size: 15px'>Please contact the administrator.</a></p>";
             }
             else if ($_GET["error"] == "wrongpassword"){
                 echo "<p>The password you’ve entered is incorrect.</p>";
@@ -42,13 +41,8 @@
 
 </section>
 <?php
-  if (isset($_GET["username"])) {
-      $username = $_GET['username'];
-  }
-  if (isset($_GET["error"])) {
-      if ($_GET["error"] == "none"){
-        echo "<script>alert('Your Username is $username')</script>";
-      } 
+  if (isset($_GET["admin-username"])) {
+      $username = $_GET['admin-username'];
   }
 ?>
 <?php 
