--- a/admin/header.html
+++ b/admin/header.html
@@ -25,25 +25,17 @@
       crossorigin="anonymous"
     ></script>
     <!-- External Javascript -->
-    <script type="text/javascript" src="../includes/funtion.inc.js"></script>
+    <script type="text/javascript" src="includes/funtion.inc.js"></script>
     <!-- Tab Icon -->
     <link rel="shortcut icon" href="../images/santarosa-logo.ico" type="image/x-icon">
     <!-- Material Icon -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@48,400,0,0" />
     <!-- External CSS -->
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 
   
     <title>
-      <?php 
-        if($page == 'index'){echo 'CSWD';}
-        elseif($page == 'sign_up'){echo 'Sign Up';}
-        elseif($page == 'home'){echo 'Home';}
-        elseif($page == 'registration'){echo 'Registration';}
-        elseif($page == 'privacy'){echo 'Privacy Policy';}
-        elseif($page == 'about-us'){echo 'About Us';}
-        elseif($page == 'contact-us'){echo 'Contact Us';}
-      ?>
+      Administrator
     </title>
   </head>
   <body>
@@ -63,7 +55,7 @@
       >
         <span class="navbar-toggler-icon"></span>
       </button>
-      <li class="collapse navbar-collapse" id="navbarSupportedContent">
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
             <a class="navbar-brand" href="../index.html">
@@ -76,16 +68,8 @@
             </a>
           </li>
           <li class="nav-item">
-            <h3 class="display-6 m-2">SantaRosa CSWD</h3>
+            <h3 class="display-6 m-2">SANTOROSA CSWD ADMINISTRATOR</h3>
           </li>
-          <?php
-            require_once '../includes/dbh.inc.php';
-            require_once '../includes/functions.inc.php';
-            if (isset($_SESSION['username'])) {
-              echo '<li class="nav-item"><h4 class="display-6 m-2">Welcome '; echo ($_SESSION["name"]); echo '</h4></li>';
-              echo '<li class="nav-item"><a class="btn btn-dark m-2" href="../includes/logout.inc.php">Log Out</a></li>';
-            }
-          ?>
         </ul>
       </div>
     </div>
