--- a/test/test2.html
+++ b/test/test2.html
@@ -1,41 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
-      crossorigin="anonymous"
-    />
-    <title>Document</title>
-</head>
-<body>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-<div class="example-1">
-  <div class="example-2"> 
-    <p>Example one</p>
-    <p>Example two</p>
-    <button class="btn-copy">Copy</button>
-    <button class="btn-delete">Delete</button>
-  </div>
-</div>
-<script>
-  $(function(){
-  $(".btn-copy").on('click', function(){
-    var ele = $(this).closest('.example-2').clone(true);
-    $(this).closest('.example-2').after(ele);
-  })
-})
+<html>
+  <head>
+    <title>
+      JQuery | Set value of input text.
+    </title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+  </head>
 
-$(".btn-delete").click(function () {
-            const countAll = document.querySelectorAll('.example-2').length;
-            if (countAll > 1) {
-                $(this).parent().closest('div').remove();
-            }
-        });
-</script>
-</body>
+  <body style="text-align: center;">
+    <input type="text" id="age" readonly/>
+    <input type="date" name="dob" id="dob" />
+    <script>
+      $('#dob').change(function () {
+        var dateOfBirth = new Date($('#dob').val())
+        //calculate month difference from current date in time
+        var month_diff = Date.now() - dateOfBirth.getTime()
+
+        //convert the calculated difference in date format
+        var age_dt = new Date(month_diff)
+
+        //extract year from date
+        var year = age_dt.getUTCFullYear()
+
+        //now calculate the age of the user
+        var age = Math.abs(year - 1970)
+
+        //display the calculated age
+        $('#age').val(age);
+        console.log(age);
+      })
+    </script>
+  </body>
 </html>
