--- a/contact-us.html
+++ b/contact-us.html
@@ -13,7 +13,7 @@
             <div class="mb-3"><label class="form-label" for="subject">Subject</label><input class="form-control item" type="text" id="subject"></div>
             <div class="mb-3"><label class="form-label" for="email">Email</label><input class="form-control item" type="email" id="email"></div>
             <div class="mb-3"><label class="form-label" for="message">Message</label><textarea class="form-control item" id="message"></textarea></div>
-            <input id="hire-date" class="form-control" type="date" />
+            <input id="hire-date" class="form-control" type="date" value ="<?php echo date('Y-m-d') ?>" readonly>
             <div class="mb-3"><button class="btn btn-primary btn-lg d-block w-100" type="submit">Send</button></div>
         </form>
     </div>
