--- a/header.html
+++ b/header.html
@@ -40,6 +40,7 @@
         elseif($page == 'sign_up'){echo 'Sign Up';}
         elseif($page == 'home'){echo 'Home';}
         elseif($page == 'registration'){echo 'Registration';}
+        elseif($page == 'profile'){echo 'Profile';}
         elseif($page == 'privacy'){echo 'Privacy Policy';}
         elseif($page == 'about-us'){echo 'About Us';}
         elseif($page == 'contact-us'){echo 'Contact Us';}
@@ -54,11 +55,11 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <!-- <li class="nav-item">
+            <li class="nav-item">
               <a class="navbar-brand" href="index.html">
                 <img src="images/ABAlogo.png" alt="Santa Rosa Logo" width="55" height="45"/>
               </a>
-            </li> -->
+            </li>
             <li class="nav-item mb-0">
               <h3>SANTAROSA CSWD</h3> 
             </li>
@@ -67,23 +68,22 @@
               require_once 'includes/functions.inc.php';
               if (isset($_SESSION['username'])) {
                 echo '<li class="nav-item ms-2"><h3>Welcome '; echo ($_SESSION["name"]); echo '</h3></li>';
-                
               }
             ?>
           </ul>
-          <!-- </div>   -->
+          </div>  
         <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent"> -->
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item"><a class="text-white" href="index.html">Home</a></li>
           <li class="nav-item ms-2"><a class="text-white" href="contact-us.html">Contact Us</a></li>
         <?php
           if (isset($_SESSION['username'])) {
-            echo '<li class="nav-item ms-2"><a class="text-white" href="registration.html">Registration</a></li>';
-            echo '<div class="ms-2"><a class="btn btn-dark" href="includes/logout.inc.php">Log Out</a></div>';
+            $username = $_SESSION['username'];
+            echo '<li class="nav-item ms-2"><a class="text-white" href="includes/logout.inc.php">Log Out</a></li>';
           }
         ?>
         </ul>
-        </div>
+        <!-- </div> -->
       </div>
     </nav>
 
